--- a/chef/build.gradle
+++ b/chef/build.gradle
@@ -25,7 +25,8 @@ repositories {
 dependencies {
     implementation 'io.github.jason-lang:jason-interpreter:3.3.0'
     implementation 'net.sf.py4j:py4j:0.10.9.3'
-    implementation 'org.json:json:20250107'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.18.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.3'
 
     // to use locally installed jars:
     implementation fileTree(dir: 'lib', include: '*.jar')
