--- a/bdi_agent/build.gradle
+++ b/bdi_agent/build.gradle
@@ -49,10 +49,10 @@ task run (type: JavaExec, dependsOn: 'classes') {
     group = 'Jason'
     description 'runs the application'
     mainClass = 'jason.infra.local.RunLocalMAS'
-    args = ['chef.mas2j']
+    args = ['bdi_agent.mas2j']
 	// options:
-	//     args = ['chef.mas2j', '--debug', '--no-net', '--empty-mas']
-	//     args = ['chef.mas2j', '--log-conf', 'l.p'] // to use file l.p to configure logging
+	//     args = ['bdi_agent.mas2j', '--debug', '--no-net', '--empty-mas']
+	//     args = ['bdi_agent.mas2j', '--log-conf', 'l.p'] // to use file l.p to configure logging
     classpath sourceSets.main.runtimeClasspath
 }
 
@@ -60,9 +60,9 @@ task runJade (type: JavaExec, dependsOn: 'classes') {
     group = 'Jason'
     description 'runs the application with Jade infrastructure'
     mainClass = 'jason.infra.jade.RunJadeMAS'
-    args = [ 'chef.mas2j', '-gui' ]
+    args = [ 'bdi_agent.mas2j', '-gui' ]
     // options:
-    //     args = ['chef.mas2j', '-gui', '-sniffer' ]
+    //     args = ['bdi_agent.mas2j', '-gui', '-sniffer' ]
     // and all usual JADE options for jade.Boot
     classpath sourceSets.main.runtimeClasspath
 }
@@ -70,8 +70,8 @@ task runJade (type: JavaExec, dependsOn: 'classes') {
 shadowJar {
     doFirst {
         copy {
-            from 'chef.mas2j'
-            rename 'chef.mas2j','default.mas2j'
+            from 'bdi_agent.mas2j'
+            rename 'bdi_agent.mas2j','default.mas2j'
             into project.projectDir.absolutePath + '/'
         }
     }
