--- a/server_overcooked/docker-compose.yml
+++ b/server_overcooked/docker-compose.yml
@@ -1,5 +1,3 @@
-version : '3.7'
-
 services:
     app:
         build:
@@ -13,7 +11,7 @@ services:
         network_mode: "host"  # Use host network mode
         environment: 
             FLASK_ENV: "${BUILD_ENV:-production}"
-            HOST: "localhost"  # Ensure the Flask app binds to all interfaces
+            HOST: "0.0.0.0"  # Ensure the Flask app binds to all interfaces
             PORT: "5000"     # Define the port for Flask
         #ports:
             #- "80:5000"
